# NagatoInterpreter

./: .gitignore  Cargo.toml  README.md  output.dot  program.txt
core/: Cargo.toml
core/src/: TreeViewer.rs  interpreter.rs  lexical.rs  lib.rs  llvm_ir.rs  parser.rs  tree_viewer.rs
src/: compiler.rs  executer.rs  lib.rs  main.rs  tree.rs
tests/: lib_tests.rs
tools/: count_line.py  generate_coverage.sh
