[workspace]
members = [
    ".",
    "core",
]

[package]
name = "NagatoInterpreter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "NagatoInterpreter"
path = "src/main.rs"

[[bin]]
name = "NagatoCompiler"
path = "src/compiler.rs"

[dependencies]
regex = "1.7"
core = { path = "./core" }
petgraph = "0.6.5"
anyhow = "1.0.95"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }